Using reat router's Outlet component to render nested elements

--- a/src/global.css
+++ b/src/global.css
@@ -20,3 +20,15 @@ nav {
   background-color: red;
 
 }
+
+main {
+}
+
+.products {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  
+}
+
+.product {
+}
