--- a/src/global.css
+++ b/src/global.css
@@ -21,19 +21,16 @@ nav {
 
 }
 
-main {
-  width: 100%;
-}
-
 .products {
   width: 50%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   
 }
 
 img {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
+  object-fit: contain;
 }
