--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+}
+
 html {
   height: 100%;
 }
@@ -22,15 +26,25 @@ nav {
 }
 
 .products {
+  padding-top: 2rem;
   width: 50%;
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  
+  gap: 2rem;
+}
+
+.product {
+  border-radius: 20px;
+  background-color: white;
 }
 
 img {
   width: 286px;
   height: 286px;
   object-fit: contain;
+}
+
+main {
+  background-color: orange;
 }
