--- a/src/global.css
+++ b/src/global.css
@@ -30,7 +30,7 @@ nav {
   width: 50%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   gap: 2rem;
 }
 
@@ -40,9 +40,17 @@ nav {
 }
 
 img {
-  width: 286px;
-  height: 286px;
+  width: 250px;
+  height: 250px;
   object-fit: contain;
+  mix-blend-mode: multiply;
+}
+
+.product-image {
+
+  margin: 0 auto;
+  padding: 3rem 0;
+  border-bottom: 3px solid #f5f3ff;
 }
 
 main {
