--- a/src/global.css
+++ b/src/global.css
@@ -56,3 +56,12 @@ img {
 main {
   background-color: orange;
 }
+
+nav {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  height: 100px;
+  background-color: white;
+  border-bottom: 3px solid #f5f3ff;
+}
