--- a/src/global.css
+++ b/src/global.css
@@ -99,6 +99,46 @@ nav {
   border-radius: 20px;
 }
 
+.quantity {
+  border-radius: 50px;
+  border: 4px solid #efefef;
+  background-color: white;
+  display: flex;
+}
+
+p.quantity-display {
+  border-left: 1px solid #efefef;
+  border-right: 1px solid #efefef;
+}
+
+.quantity > * {
+  padding: 0.75rem 1.5rem;
+  font-size: large;
+  width: min-content;
+  height: min-content;
+}
+
+.quantity button {
+
+  border: none;
+  background-color: inherit;
+  outline: none;
+}
+
+.quantity button:nth-child(1) {
+  border-top-left-radius: 50px;
+  border-bottom-left-radius: 50px;
+}
+
+.quantity button:nth-child(3) {
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+}
+
+.quantity button:hover {
+  background-color: #e8e8e8;
+}
+
 h1.cart-title{
   padding-top: 2rem;
   padding-left: 1rem;
