--- a/src/global.css
+++ b/src/global.css
@@ -161,10 +161,12 @@ p.quantity-display {
 
 .trash-image {
   width: 30px;
+  filter: invert(63%) sepia(0%) saturate(42%) hue-rotate(244deg) brightness(95%) contrast(89%);
 }
 
 .delete > .text {
   font-size: 20px;
+  color: #969696;
 }
 .quantity button:nth-child(1) {
   border-top-left-radius: 20px;
@@ -262,6 +264,7 @@ h1.cart-title{
 
   border: none;
   background-color: white;
+  color: #0085fe;
 }
 .buttons {
   margin-top: 2rem;
@@ -276,11 +279,13 @@ img.right-arrow{
   width: 20px;
   padding-left: 5px;
   height: 20px;
+  filter: invert(100%) sepia(98%) saturate(8%) hue-rotate(182deg) brightness(104%) contrast(104%);
 }
 
 img.left-arrow{
   width: 20px;
   height: 20px;
+  filter: invert(36%) sepia(64%) saturate(3581%) hue-rotate(193deg) brightness(101%) contrast(101%);
 }
 
 @media(max-width: 1120px) {
