--- a/src/global.css
+++ b/src/global.css
@@ -81,6 +81,7 @@ main {
 nav {
   position: sticky;
   top: 0;
+  box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
   z-index: 1;
   height: 100px;
   background-color: white;
@@ -191,7 +192,12 @@ p.quantity-display {
   cursor: pointer;
 }
 
-h1.cart-title{
+.shop-title, .shop-description {
+  padding-top: 1rem;
+  text-align: center;
+}
+
+h2.cart-title{
   padding-top: 2rem;
   padding-left: 1rem;
   padding-bottom: 2rem;
