--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: bayer-sans;
+  src: url(assets/Bayer_Sans.ttf);
+}
 * {
   margin: 0;
 }
@@ -23,6 +27,15 @@ code {
 nav {
   background-color: red;
 
+}
+
+.logo-image {
+  border-radius: 40px;
+}
+
+.nav-title {
+  font-family: bayer-sans;
+  letter-spacing: 3px;
 }
 
 .products {
@@ -86,6 +99,15 @@ nav {
   height: 100px;
   background-color: white;
   border-bottom: 3px solid #f5f3ff;
+}
+#root > div > nav > div > div > h1 {
+  padding: 0rem 1rem;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+  gap: 1rem;
 }
 
 .cart-container {
