--- a/src/global.css
+++ b/src/global.css
@@ -48,6 +48,10 @@ nav {
   border-radius: 40px;
 }
 
+.logo-image:hover{
+  opacity: 0.7;
+}
+
 .nav-title {
   font-family: bayer-sans;
   letter-spacing: 3px;
@@ -66,6 +70,11 @@ nav {
 .product {
   border-radius: 20px;
   background-color: white;
+}
+
+h2.product-title {
+  padding-left: 1rem;
+  padding-top: 1rem;
 }
 
 nav img {
