--- a/src/global.css
+++ b/src/global.css
@@ -62,6 +62,24 @@ ul > li > *:hover {
 
 }
 
+.empty-cart{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  padding: 10rem 0.5rem;
+}
+
+.empty-cart.image {
+  background-color: black;
+  padding: 4rem 1rem;
+  
+}
+
 .product-review{
   font-family: tangent-bold;
 }
@@ -178,6 +196,10 @@ nav {
 
 .cart .total {
   color: black;
+}
+.cart {
+
+  box-shadow: 0 20px 25px -5px rgba(0,0,0,.1),0 10px 10px -5px rgba(0,0,0,.04);
 }
 
 .products {
