--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
 @font-face {
   font-family: andis-regular;
   src: url(assets/JAM\ Type\ Design\ -\ Andis\ Regular.otf);
@@ -590,26 +592,47 @@ button > img{
 
 .hero-title {
   font-family: bayer-sans;
-  font-size: 3.1rem;
-  line-height: 2rem;
-  word-spacing: 2rem;
-  letter-spacing: 2rem;
+  font-size: 5rem;
+  line-height: 1.5;
+  font-weight: bold; 
+  letter-spacing: 0.25rem;
 }
 
 .hero {
-  height: 100vh;
   justify-content: space-around;
   align-items: center;
   display: flex;
   animation: fadeIn ease 2s;
+  padding: 1rem;
 }
 
 .hero-text {
   padding: 2rem;
+  font-size: 2rem;
+  line-height: 2.5;
+  font-family: 'Poppins'
 }
 
-.hero-image{
+.hero-image-container{
   padding: 2rem;
+}
+
+.hero-image {
+  border-radius: 100px;
+}
+
+.hero-button {
+  margin-top: 2rem;
+  width: 39rem;
+  font-size: 4rem;
+  border-radius: 50px;
+  padding: 2rem;
+  color: white;
+  background-color: black;
+}
+
+.hero-button:hover{
+  transform: scale(1.1);
 }
 
 @keyframes fadeIn {
